835.	[build]		fdupont
	The configure script checks if OpenSSL supports SHA-2, in order
	to avoid very old (and likely subject to unfixed security bugs)
	OpenSSL versions.
	(Trac #3482, git c779a0ef23d2092cf896276dab1fbcb190380374)

834.	[bug]		marcin
	Corrected the definition of the example DHCPv4 and DHCPv6 address
	pools in the default kea.conf file.
	(Trac #3538, git 8712cc0df77368940d8d3d11811a9ac9504bce12)

833.	[func]		marcin
	Configuration Manager supports two stage configuration. In the
	first stage a temporary configuration is created and in the
	second stage this configuration is committed. If configuration
	fails at the first stage, the temporary configuration is rolled
	back and the server continues to use the old configuration.
	(Trac #3534, git 4ecee3c0c97fe417b050317356f9093ba3771a15)

Kea 0.9 released on August 29, 2014

832.	[bug]		jiri
	Compilation fix for PostgreSQL on i686. Thanks to Jiri Popelka
	from RedHat for providing a patch!
	(Trac #3532, git 96a06654f2177444dcea3a0e9f6fa06947855497)

831.	[func]		marcin
	DHCP servers check if the interfaces specified in the configuration,
	to be used to receive DHCP messages, are present in the system.
	If the interface doesn't exist, an error is reported. In addition,
	the SO_REUSEPORT flag is set for IPv6 sockets as multiple multicast
	sockets can be bound to the DHCPv6 server port.
	(Trac #3512, git 5cbbab2d01c6e1bf6d563ba64d80bc6bc857f73d)

830.	[build]		jreed
	The configure script no longer requires pkg-config.
	(Trac #3511, git 99a5a2db8c011b358873d485ac48f7c78ac6374c)

829.	[build]		wlodek
	Lettuce DNS tests removed with all related python code,
	most of them will be used in Forge project which can be found
	http://kea.isc.org/wiki/IscForge
	(Trac #3420, git e51bcbeedbc169050751c1b896726965243667be)

828.	[bug]		marcin
	Corrected the IfaceMgrTest.detectIface unit test that failed on
	Linux systems with virtual interfaces present.
	(Trac #3527, git 7aa01a6965b6e9fc39ff005803cada7f58f2e628)
